--- a/Sube2.HelloMvc/Views/Ogrenci/OgrenciListe.cshtml
+++ b/Sube2.HelloMvc/Views/Ogrenci/OgrenciListe.cshtml
@@ -1,37 +1,27 @@
-﻿@model List<Ogrenci>
+﻿@model List<Sube2.HelloMvc.Models.Ogrenci>
 @{
-    Layout = null;
+    ViewData["Title"] = "Öğrenci Listesi";
+    ViewData["Desc"] = "Okuldaki tüm öğrencilerin listesi";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>OgrenciListe</title>
-</head>
-<body>
-    <div class="container">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Ad</th>
-                    <th>Soyad</th>
-                    <th>Numara</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>@item.Ad</td>
-                        <td>@item.Soyad</td>
-                        <td>@item.Numara</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-</body>
-</html>
+
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th>Ad</th>
+            <th>Soyad</th>
+            <th>Numara</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var ogr in Model)
+        {
+            <tr>
+                <td>@ogr.Ad</td>
+                <td>@ogr.Soyad</td>
+                <td>@ogr.Numara</td>
+            </tr>
+        }
+    </tbody>
+</table>
